refactor: remove stoires

--- a/stories/Usage.stories.mdx
+++ b/stories/Usage.stories.mdx
@@ -2,19 +2,9 @@ import { Meta, Props } from '@storybook/addon-docs/blocks';
 
 <Meta title="Basic|Usage" />
 
-# Installation
-
-```npm
-npm install react-hooks-pull-to-refresh
-```
-
-```yarn
-yarn add react-hooks-pull-to-refresh
-```
-
 # Usage
 
-```javascript
+```typescript jsx
 import React, { useState } from 'react';
 import { usePullToRefresh } from 'react-hooks-pull-to-refresh';
 
