--- a/stories/Changelog.stories.mdx
+++ b/stories/Changelog.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Basic|Changelog" />
+<Meta title="Basic|发布日志" />
 
 # 1.0.0 (2020-03-24)
 
