--- a/stories/Changelog.stories.mdx
+++ b/stories/Changelog.stories.mdx
@@ -2,8 +2,14 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 <Meta title="Basic|发布日志" />
 
-# 1.0.0 (2020-03-24)
+# 1.0.0 (2020-03-26)
+
 
 ### Features
 
-- Provide React Hooks: usePullToRefresh ([0a7102b](https://github.com/xuyuanxiang/react-hooks-pull-to-refresh/commit/0a7102b976715729c4bfe0c3f275b6a7f4dddd3b))
+* Provide React Hooks: usePullToRefresh ([0a7102b](https://github.com/xuyuanxiang/react-hooks-pull-to-refresh/commit/0a7102b976715729c4bfe0c3f275b6a7f4dddd3b))
+
+
+
+
+
