--- a/stories/Usage.iscroll.stories.mdx
+++ b/stories/Usage.iscroll.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Basic|和iscroll一起使用" />
+<Meta title="Usage|和iscroll一起使用" />
 
 # 和 iscroll 一起使用
 
