--- a/stories/Usage.umi.stories.mdx
+++ b/stories/Usage.umi.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Basic|在umi中使用" />
+<Meta title="Usage|在umi中使用" />
 
 # 在[umi](https://umijs.org/zh/)中使用
 
