docs: update storybook

--- a/stories/Changelog.stories.mdx
+++ b/stories/Changelog.stories.mdx
@@ -1,9 +1,8 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Basic|发布日志" />
+<Meta title="Basic|Changelog" />
 
 # 1.0.0 (2020-03-26)
-
 
 ### Features
 
