--- a/stories/Integration.iscroll.stories.mdx
+++ b/stories/Integration.iscroll.stories.mdx
@@ -1,118 +1,17 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Usage|和iscroll一起使用" />
+<Meta title="Integration|iScroll" />
 
-# 和 iscroll 一起使用
+# Using with iScroll
 
-使用`iscroll`用 transform 的方式模拟滚动效果时，需要监听 iScroll 实例的'scrollEnd'事件，获取滚动区视图的 scrollTop 告知`usePullToRefresh`:
+By default `iScroll` uses the `transform` CSS property instead of browser's scroll-behavior.
+
+Registering a listener on `scrollEnd` event and extract the `scrollTop` value to tell `usePullToRefresh` that the scroll view has reached top:
 
 ```typescript
 import React, { useState, useLayoutEffect, useRef } from 'react';
 import IScroll from 'iscroll';
 import { usePullToRefresh } from 'react-hooks-pull-to-refresh';
-
-const DATA = [
-  '雷杰',
-  '黄刚',
-  '薛涛',
-  '陈勇',
-  '姚明',
-  '郑勇',
-  '戴娜',
-  '萧勇',
-  '程涛',
-  '徐平',
-  '贺秀英',
-  '夏明',
-  '邵涛',
-  '熊秀兰',
-  '魏磊',
-  '侯秀英',
-  '杨芳',
-  '薛杰',
-  '徐明',
-  '曾杰',
-  '徐涛',
-  '康强',
-  '陈丽',
-  '何芳',
-  '廖静',
-  '谭超',
-  '汪涛',
-  '邵杰',
-  '崔丽',
-  '于敏',
-  '韩霞',
-  '何伟',
-  '吴平',
-  '贾勇',
-  '白明',
-  '薛艳',
-  '夏桂英',
-  '田丽',
-  '尹杰',
-  '乔军',
-  '赖明',
-  '赖娜',
-  '宋敏',
-  '任强',
-  '万强',
-  '赵秀英',
-  '许丽',
-  '乔静',
-  '钱伟',
-  '陈芳',
-  '郭强',
-  '马磊',
-  '卢艳',
-  '傅秀兰',
-  '熊芳',
-  '石刚',
-  '钱丽',
-  '汪秀兰',
-  '郭勇',
-  '范秀兰',
-  '董涛',
-  '文丽',
-  '叶娜',
-  '秦丽',
-  '何霞',
-  '何明',
-  '姜艳',
-  '冯勇',
-  '吕刚',
-  '万伟',
-  '武平',
-  '郭丽',
-  '赖涛',
-  '方涛',
-  '黄丽',
-  '苏秀英',
-  '杜霞',
-  '廖秀兰',
-  '高涛',
-  '蒋明',
-  '曹刚',
-  '龙艳',
-  '宋平',
-  '邵敏',
-  '廖芳',
-  '杨娟',
-  '田磊',
-  '吴军',
-  '罗娟',
-  '卢涛',
-  '余勇',
-  '龚军',
-  '郭丽',
-  '姚军',
-  '韩军',
-  '曾勇',
-  '锺刚',
-  '程静',
-  '邓娜',
-  '顾霞',
-];
 
 export default function App(): JSX.Element {
   const scrollContainerRef = useRef<HTMLDivElement>(null);
@@ -121,7 +20,6 @@ export default function App(): JSX.Element {
   let iScroll: IScroll;
 
   function onScrollEnd() {
-    console.warn('onScrollEnd');
     if (!iScroll) return;
     const { y } = iScroll;
     const scrollTop = Math.abs(y);
@@ -148,19 +46,13 @@ export default function App(): JSX.Element {
     };
   });
 
+  async function onRefresh(): Promise<void> {
+    // TODO
+  }
   const ref = usePullToRefresh<HTMLDivElement>(
-    () =>
-      new Promise((resolve) => {
-        setTimeout(() => {
-          setDataSource(dataSource.slice(Math.random() * (dataSource.length - 1)));
-          if (iScroll) {
-            iScroll.refresh();
-          }
-          resolve();
-        }, 2000);
-      }),
-    {},
-    [scrollTop],
+    onRefresh,
+    {}, // options
+    [scrollTop], // dependency list
   );
 
   return (
@@ -182,7 +74,7 @@ export default function App(): JSX.Element {
 }
 ```
 
-附全局样式：
+Here is the global styles：
 
 ```html
 <style type="text/css">
