--- a/stories/Integration.umi.stories.mdx
+++ b/stories/Integration.umi.stories.mdx
@@ -1,8 +1,8 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Usage|在umi中使用" />
+<Meta title="Integration|umi" />
 
-# 在[umi](https://umijs.org/zh/)中使用
+# Using with [umi](https://umijs.org/zh/)
 
 ## src/models/foo.js
 
